comp warnings.txt



sketch/GfxUi.cpp: In member function 'void GfxUi::drawBmp(String, uint16_t, uint16_t)':
sketch/GfxUi.cpp:64:23: warning: unused variable 'col' [-Wunused-variable]
   uint16_t w, h, row, col;
                       ^
/home/graham/Arduino/ESP32_TFT_MQTT_temp_monitor/ESP32_TFT_MQTT_temp_monitor.ino: In function 'void get_weather_t(void*)':
/home/graham/Arduino/ESP32_TFT_MQTT_temp_monitor/ESP32_TFT_MQTT_temp_monitor.ino:202:16: warning: variable 'deseraliseError' set but not used [-Wunused-but-set-variable]
           auto deseraliseError = deserializeJson(root, payload);
                ^
/home/graham/Arduino/ESP32_TFT_MQTT_temp_monitor/ESP32_TFT_MQTT_temp_monitor.ino:235:16: warning: variable 'deseraliseError' set but not used [-Wunused-but-set-variable]
           auto deseraliseError = deserializeJson(root, payload);
                ^
/home/graham/Arduino/ESP32_TFT_MQTT_temp_monitor/ESP32_TFT_MQTT_temp_monitor.ino:275:16: warning: variable 'deseraliseError' set but not used [-Wunused-but-set-variable]
           auto deseraliseError = deserializeJson(root, payload);
                ^
/home/graham/Arduino/ESP32_TFT_MQTT_temp_monitor/ESP32_TFT_MQTT_temp_monitor.ino:187:14: warning: unused variable 'weather_server' [-Wunused-variable]
   const char weather_server[] = WEATHER_SERVER;
              ^
/home/graham/Arduino/ESP32_TFT_MQTT_temp_monitor/ESP32_TFT_MQTT_temp_monitor.ino:188:14: warning: unused variable 'location' [-Wunused-variable]
   const char location[] = LOCATION;
              ^
/home/graham/Arduino/ESP32_TFT_MQTT_temp_monitor/ESP32_TFT_MQTT_temp_monitor.ino:189:8: warning: unused variable 'line' [-Wunused-variable]
   char line[CHAR_LEN];
        ^
/home/graham/Arduino/ESP32_TFT_MQTT_temp_monitor/ESP32_TFT_MQTT_temp_monitor.ino: In function 'void tft_output_t(void*)':
/home/graham/Arduino/ESP32_TFT_MQTT_temp_monitor/ESP32_TFT_MQTT_temp_monitor.ino:420:12: warning: unused variable 'calData' [-Wunused-variable]
   uint16_t calData[5] = TOUCH_CALIBRATION;
            ^
/home/graham/Arduino/ESP32_TFT_MQTT_temp_monitor/ESP32_TFT_MQTT_temp_monitor.ino: In function 'void update_mqtt_settings()':
ESP32_TFT_MQTT_temp_monitor:99:20: error: comparison with string literal results in unspecified behaviour [-Werror=address]
 #define DESC_ONOFF "ONO"
                    ^
/home/graham/Arduino/ESP32_TFT_MQTT_temp_monitor/ESP32_TFT_MQTT_temp_monitor.ino:653:36: note: in expansion of macro 'DESC_ONOFF'
     if (settings[i].description == DESC_ONOFF) {
                                    ^
/home/graham/Arduino/ESP32_TFT_MQTT_temp_monitor/ESP32_TFT_MQTT_temp_monitor.ino: In function 'void receive_mqtt_messages_t(void*)':
/home/graham/Arduino/ESP32_TFT_MQTT_temp_monitor/ESP32_TFT_MQTT_temp_monitor.ino:679:8: warning: variable 'readingMessageReceived' set but not used [-Wunused-but-set-variable]
   bool readingMessageReceived;
        ^
/home/graham/Arduino/ESP32_TFT_MQTT_temp_monitor/ESP32_TFT_MQTT_temp_monitor.ino: In function 'void loop()':
ESP32_TFT_MQTT_temp_monitor:98:20: error: comparison with string literal results in unspecified behaviour [-Werror=address]
 #define NO_READING "--"            // Screen output before any mesurement is received
                    ^
/home/graham/Arduino/ESP32_TFT_MQTT_temp_monitor/ESP32_TFT_MQTT_temp_monitor.ino:735:106: note: in expansion of macro 'NO_READING'
     if ((millis() > readings[i].lastMessageTime + (MAX_NO_MESSAGE_SEC * 1000)) && (readings[i].output != NO_READING) && (readings[i].changeChar == CHAR_NO_MESSAGE)) {
                                                                                                          ^
cc1plus: some warnings being treated as errors
Multiple libraries were found for "WiFi.h"
 Used: /home/graham/.arduino15/packages/esp32/hardware/esp32/1.0.1/libraries/WiFi
 Not used: /home/graham/Arduino/libraries/WiFiNINA
 Not used: /home/graham/arduino-1.8.9/libraries/WiFi
Multiple libraries were found for "SD.h"
 Used: /home/graham/.arduino15/packages/esp32/hardware/esp32/1.0.1/libraries/SD
 Not used: /home/graham/arduino-1.8.9/libraries/SD
exit status 1
comparison with string literal results in unspecified behaviour [-Werror=address]
